--- a/src/secflaws/templates/secflaws/login.html
+++ b/src/secflaws/templates/secflaws/login.html
@@ -7,7 +7,7 @@
     <body>
 		<h1>Database of Secrets</h1>
 
-    <p>Welcome to the databse of secrets! We will keep your secrets for you - in case you forget.</p>
+    <p>Welcome to the database of secrets! We will keep your secrets for you - in case you forget.</p>
     </body>
 </html>
 
