--- a/src/secflaws/templates/secflaws/index.html
+++ b/src/secflaws/templates/secflaws/index.html
@@ -13,6 +13,14 @@
             <input type="submit" value="Logout"/>
         </form>
         
+        <h2>Add a new secret</h2>
+
+        <form action='/secflaws/add/' method="POST">
+            {% csrf_token %}
+
+			<input type="text" name="secret"/><br/>
+            <input type="submit" value="Send"/>
+        </form>
         
         <h2>List of your secrets</h2>
 
